sumo/tests/duarouter/trips/errors/vehicle_empty_departspeed/errors.duarouter
Error: Invalid departspeed definition for vehicle ''
Quitting (on error).
